# DrumCharter

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  model.md  training.md
src/audiotochart/: adtof_model.py  audio.py  branding.py  cli.py  config.py  device.py  download.py  drums.py  onset_decoder_common.py  pipeline.py  postprocess.py  separation.py  tempo.py
src/audiotochart/chart/: __init__.py  convert.py  difficulty.py  drum_vocab.py  fake.py  format.py  midi.py  songini.py
src/audiotochart/inference/: adtof.py  base.py  checkpoint.py  fake.py  model.py  onset_decoder.py  tom_consistency.py
src/audiotochart/training/: __init__.py  blacklist.json  chord_hybrid_eval.py  config.py  cqs.py  dataset.py  discovery.py  evaluate.py  extract.py  labels.py  losses.py  model.py  onset_decoder.py  onset_precompute.py  pipeline.py  rb_midi.py  spectrogram.py  thresholds.py  train.py
src/drumcharter/: __init__.py  audio.py  branding.py  cli.py  config.py  download.py  drums.py  onset_decoder_common.py  pipeline.py  postprocess.py  separation.py  tempo.py
src/drumcharter/chart/: __init__.py  convert.py  difficulty.py  fake.py  midi.py
src/drumcharter/inference/: __init__.py  adtof.py  base.py  checkpoint.py  fake.py  model.py  onset_decoder.py  (+1 more)
tests/: test_adtof_backend.py  test_audio.py  test_chart_convert.py  test_chart_format.py  test_chord_hybrid_eval.py  test_config.py  test_cqs.py  test_difficulty.py  test_inference_interface.py  test_midi_to_chart.py  test_model_backend.py  test_onset_decoder.py  test_onset_decoder_training.py  test_onset_precompute.py  test_pipeline.py  test_postprocess.py  test_separation.py  test_tempo.py  test_tom_consistency.py  test_training_dataset.py
(+15 files in other folders)
