[project]
name = "audiotochart"
version = "0.1.0"
description = "Generate playable Clone Hero drum charts from any song"
readme = "README.md"
authors = [
    { name = "Eli Grosman", email = "eligrosman1@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.3",
    "librosa>=0.11.0",
    "rich>=15.0.0",
    "yt-dlp>=2026.3.17",
]

[project.optional-dependencies]
midi = [
    "pretty_midi>=0.2.10",
]


[project.scripts]
audiotochart = "audiotochart.cli:cli"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "chparse>=0.0.3",
    "pretty_midi>=0.2.10",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
